--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    
+    <div class="header">
+      <div class="heading">Broadway Design</div>
+      <div class="link">
+        <a href="">Home</a><br><br>
+        <a href="">Process</a><br><br>
+        <a href="">Work</a><br><br>
+        <a href="">Team</a><br><br>
+        <a href="">Contact</a>
+      </div>
+    </div>
   </body>
 </html>
