--- a/index.html
+++ b/index.html
@@ -16,5 +16,30 @@
         <a href="">Contact</a>
       </div>
     </div>
+    <div class="content">
+  <div class="process">
+    Our Process
+  </div>
+  <div class="identify">
+    <img src="./resources/images/identify.svg" alt="">
+    <div class="title">
+      Identify
+    </div>
+    <p>We focus on the most important details.</p>
+  </div>
+  <div class="understand">
+    <img src="./resources/images/understand.svg" alt="">
+    <div class="title">
+      Understand
+    </div>
+    <p>We study our projects inside and out.</p>
+  </div>
+  <div class="Execute">
+      <img src="./resources/images/execute.svg" alt="">
+    <div class="title">
+      Execute
+    </div>
+    <p>We put everything we have into our work.</p>
+  </div>
   </body>
 </html>
