--- a/index.html
+++ b/index.html
@@ -41,5 +41,33 @@
     </div>
     <p>We put everything we have into our work.</p>
   </div>
+
+  <div class="designedIn">
+    Designed In New York
+  </div>
+  <div class="title">
+      Portfolio
+  </div>
+  <p>Coming Soon</p>
+  <div class="title">
+      Team
+  </div>
+  <p>We're Hiring!</p>
+  <div class="title">
+      Contact
+  </div>
+  <p>Phone:(555)-555-5555</p>
+  <p>E-mail:test@example.com</p>
+  <p>Twitter:@test</p>
+</div>
+<div class="footer">
+  &copy;Broadway2016
+    <a href="">Home</a>
+    <a href="">Process</a>
+    <a href="">Work</a>
+    <a href="">Team</a>
+    <a href="">Contact</a>
+</div>
+
   </body>
 </html>
