--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
+    <!-- Header1 -->
     <div class="header">
       <div class="heading">Broadway Design</div>
       <div class="link">
@@ -16,58 +17,64 @@
         <a href="">Contact</a>
       </div>
     </div>
+    <!-- Content -->
     <div class="content">
-  <div class="process">
-    Our Process
-  </div>
-  <div class="identify">
-    <img src="./resources/images/identify.svg" alt="">
-    <div class="title">
-      Identify
+      <!-- Process -->
+      <div class="process">
+        Our Process
+      </div>
+      <!-- Identify -->
+      <div class="identify">
+        <img src="./resources/images/identify.svg" alt="">
+        <div class="title">
+          Identify
+        </div>
+        <p>We focus on the most important details.</p>
+      </div>
+      <!-- Understand -->
+      <div class="understand">
+        <img src="./resources/images/understand.svg" alt="">
+        <div class="title">
+          Understand
+        </div>
+        <p>We study our projects inside and out.</p>
+      </div>
+      <!-- Execute -->
+      <div class="Execute">
+        <img src="./resources/images/execute.svg" alt="">
+        <div class="title">
+          Execute
+        </div>
+        <p>We put everything we have into our work.</p>
+      </div>
+      <!-- Information-->
+      <div class="designedIn">
+        Designed In New York
+      </div>
+      <div class="title">
+        Portfolio
+      </div>
+      <p>Coming Soon</p>
+      <div class="title">
+        Team
+      </div>
+      <p>We're Hiring!</p>
+      <div class="title">
+        Contact
+      </div>
+      <p>Phone:(555)-555-5555</p>
+      <p>E-mail:test@example.com</p>
+      <p>Twitter:@test</p>
     </div>
-    <p>We focus on the most important details.</p>
-  </div>
-  <div class="understand">
-    <img src="./resources/images/understand.svg" alt="">
-    <div class="title">
-      Understand
+    <!-- Footer -->
+    <div class="footer">
+      &copy;Broadway2016
+      <a href="">Home</a>
+      <a href="">Process</a>
+      <a href="">Work</a>
+      <a href="">Team</a>
+      <a href="">Contact</a>
     </div>
-    <p>We study our projects inside and out.</p>
-  </div>
-  <div class="Execute">
-      <img src="./resources/images/execute.svg" alt="">
-    <div class="title">
-      Execute
-    </div>
-    <p>We put everything we have into our work.</p>
-  </div>
-
-  <div class="designedIn">
-    Designed In New York
-  </div>
-  <div class="title">
-      Portfolio
-  </div>
-  <p>Coming Soon</p>
-  <div class="title">
-      Team
-  </div>
-  <p>We're Hiring!</p>
-  <div class="title">
-      Contact
-  </div>
-  <p>Phone:(555)-555-5555</p>
-  <p>E-mail:test@example.com</p>
-  <p>Twitter:@test</p>
-</div>
-<div class="footer">
-  &copy;Broadway2016
-    <a href="">Home</a>
-    <a href="">Process</a>
-    <a href="">Work</a>
-    <a href="">Team</a>
-    <a href="">Contact</a>
-</div>
 
   </body>
 </html>
